
[patch.crates-io]
abi_stable = { version = "0.10", git = "https://github.com/rodrimati1992/abi_stable_crates" }

[workspace]
members = [
	"cglue",
	"cglue-gen",
	"cglue-macro",
	"cglue-bindgen",
	"examples/plugin-api",
	"examples/plugin-lib",
	"examples/user-bin"
]

default-members = [
	"cglue",
	"cglue-gen",
	"cglue-macro",
	"cglue-bindgen",
]

