
[workspace]
members = [
    "cglue",
    "cglue-gen",
    "cglue-macro",
    "cglue-bindgen",
    "examples/plugin-api",
    "examples/plugin-lib",
    "examples/user-bin",
    "version-hack"
]

default-members = [
    "cglue",
    "cglue-gen",
    "cglue-macro",
    "cglue-bindgen",
    "version-hack",
]

#[patch.crates-io]
#abi_stable = { version = "0.11", path = "../../other/abi_stable_crates/abi_stable" }
