[package]
name = "cglue-gen"
version = "0.1.3"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
description = "FFI safe code generation for making plugins and C-compatible libraries"
license = "MIT"
documentation = "https://docs.rs/cglue-gen"
repository = "https://github.com/h33p/cglue"
keywords = [ "cglue", "abi", "ffi", "cbindgen", "macro" ]
categories = [ "api-bindings", "accessibility", "parsing" ]
readme = "../README.md"

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
proc-macro2 = "1"
quote = "1"
proc-macro-crate = "1"
itertools = "0.10"
lazy_static = "1"

[features]
default = []
no_empty_retwrap = []
