[package]
name = "cglue-macro"
version = "0.2.1"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
description = "FFI safe code generation macros for making plugins and C-compatible libraries"
license = "MIT"
documentation = "https://docs.rs/cglue-macro"
repository = "https://github.com/h33p/cglue"
keywords = [ "cglue", "abi", "ffi", "cbindgen", "macro" ]
categories = [ "api-bindings", "accessibility", "parsing" ]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
proc-macro2 = "1"
quote = "1"
cglue-gen = { version = "0.2", path = "../cglue-gen" }

[features]
default = []
rust_void = ["cglue-gen/rust_void"]
unstable = ["cglue-gen/unstable"]
layout_checks = ["cglue-gen/layout_checks"]
