[package]
name = "cglue"
version = "0.2.14"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
description = "FFI safe abstractions for making plugins and C-compatible libraries"
license = "MIT"
documentation = "https://docs.rs/cglue"
repository = "https://github.com/h33p/cglue"
keywords = [ "cglue", "abi", "ffi", "cbindgen", "macro" ]
categories = [ "api-bindings", "accessibility", "parsing" ]
readme = "../README.md"

[dependencies]
cglue-macro = { version = "0.2", path = "../cglue-macro" }
no-std-compat = { version = "0.4", features = ["alloc"] }
serde = { version = "1", optional = true, default-features = false, features = ["derive", "alloc"] }
try_default = { version = "= 1.0.0", optional = true }
abi_stable = { version = "0.10", optional = true }
log = { version = "0.4", optional = true }
tarc = { version = "0.1", default-features = false }

[build-dependencies]
rustc_version = "0.4"
# Need to uncomment these before cargo update to keep hashbrown on rust 2018 edition
#indexmap = "~1.8"
#once_cell = "~1.14"
#thiserror = "=1.0.24"
#thiserror-impl = "=1.0.24"
#serde = "=1.0.127"

[features]
default = ["std"]
std = ["no-std-compat/std", "tarc/std"]
rust_void = ["cglue-macro/rust_void"]
unstable = ["cglue-macro/unstable", "try_default"]
task_unstable = []
layout_checks = ["cglue-macro/layout_checks", "abi_stable"]

[package.metadata.docs.rs]
features = ["std", "task_unstable"]
