[package]
name = "plugin-api"
version = "0.1.0"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
cglue = { path = "../../cglue/", features = ["layout_checks"] }
abi_stable = { path = "../../../../other/abi_stable_crates/abi_stable" }
libloading = "0.7"
