[package]
name = "plugin-lib"
version = "0.1.0"
authors = ["Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
cglue = { path = "../../cglue/", features = ["layout_checks"] }
plugin-api = { path = "../plugin-api" }
libloading = "0.7"
